refactor tests to test columns and cards separately